# cowponder

./: Makefile  README.md  cowponder  cowponder_0.0.1-1_all.deb  cowponder_debian_installer.sh  cowponder_installer.sh  cowthoughts.txt  generate-release.sh  ponder  readme.md
apt-repo/dists/stable/: Release
apt-repo/pool/main/: cowponder_0.0.1-1_all.deb
cowponder-apt-repo/dists/stable/main/binary-all/: Packages
cowponder_0.0.1-1_all/DEBIAN/: control
cowponder_0.0.1-1_all/etc/: cowthoughts.txt
cowponder_0.0.1-1_all/usr/local/games/: cowponder  ponder
cowponder_debian/: Makefile  cowponder_0.0.1-1_all.deb  cowponder_debian_installer.sh
cowponder_debian/cowponder_0.0.1-1_all/DEBIAN/: control
cowponder_homebrew/Formula/: cowponder.rb
cowponder_homebrew/Formula/resources/contents/: ponder
cowponder_homebrew/resources/: Makefile
cowponder_homebrew/resources/contents/: cowponder  cowponder.py  ponder  ponder.py
cowponder_pip/: .gitignore  README.md  ___IGNOREME_pyproject.toml  build_deploy.sh  pyproject.toml  requirements.txt  setup.py
cowponder_pip/cowponder/: __init__.py  __main__.py  cowponder.py  ponder.py
cowponder_pip/src/cowponder/: __init__.py  cowponder.py  ponder.py  requirements.txt  setup.py
cowponder_windows/: cowponder.psd1  cowponder.psm1
