[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowponder"
version = "0.0.2"
authors = [
    {name="Max Cai",  email="maxster@xz.ax"},
    {name="Reid Dye", email="reid@xz.ax"},
]
description = "A simple command that displays randomly selected philosophical thoughts from a cow"
readme = "README.md"
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://max.xz.ax/cowponder"
"Source Code" = "https://github.com/maxcai314/cowponder"
"Bug Tracker" = "https://github.com/maxcai314/cowponder/issues"
